fix blurry about icons on hover

--- a/styles/AboutStrip.module.css
+++ b/styles/AboutStrip.module.css
@@ -45,7 +45,7 @@
 }
 
 .aboutImageContainer:hover {
-  filter: drop-shadow(0px 8px 5px #39251f);
+  box-shadow: 0px 8px 5px #39251f;
 }
 
 .aboutImageSmall {
